auth failed fixed